--- a/Conditional Probability.ipynb
+++ b/Conditional Probability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4        3       1            4  Returning_Visitor     True    False  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,6 +672,47 @@
    ],
    "source": [
     "conditional_probabilities_bayes_theorem('VisitorType')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 12330 entries, 0 to 12329\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   Administrative           12330 non-null  int64  \n",
+      " 1   Administrative_Duration  12330 non-null  float64\n",
+      " 2   Informational            12330 non-null  int64  \n",
+      " 3   Informational_Duration   12330 non-null  float64\n",
+      " 4   ProductRelated           12330 non-null  int64  \n",
+      " 5   ProductRelated_Duration  12330 non-null  float64\n",
+      " 6   BounceRates              12330 non-null  float64\n",
+      " 7   ExitRates                12330 non-null  float64\n",
+      " 8   PageValues               12330 non-null  float64\n",
+      " 9   SpecialDay               12330 non-null  float64\n",
+      " 10  Month                    12330 non-null  object \n",
+      " 11  OperatingSystems         12330 non-null  int64  \n",
+      " 12  Browser                  12330 non-null  int64  \n",
+      " 13  Region                   12330 non-null  int64  \n",
+      " 14  TrafficType              12330 non-null  int64  \n",
+      " 15  VisitorType              12330 non-null  object \n",
+      " 16  Weekend                  12330 non-null  bool   \n",
+      " 17  Revenue                  12330 non-null  bool   \n",
+      "dtypes: bool(2), float64(7), int64(7), object(2)\n",
+      "memory usage: 1.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "preprocessed_data.info()"
    ]
   },
   {
