--- a/Machine  Learning Phase.ipynb
+++ b/Machine  Learning Phase.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,22 +174,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   Administrative  Administrative_Duration  Informational  \\\n",
-       "0               0                      0.0              0   \n",
+       "   Administrative  Administrative_Duration  Informational   \n",
+       "0               0                      0.0              0  \\\n",
        "1               0                      0.0              0   \n",
        "2               0                      0.0              0   \n",
        "3               0                      0.0              0   \n",
        "4               0                      0.0              0   \n",
        "\n",
-       "   Informational_Duration  ProductRelated  ProductRelated_Duration  \\\n",
-       "0                     0.0               1                 0.000000   \n",
+       "   Informational_Duration  ProductRelated  ProductRelated_Duration   \n",
+       "0                     0.0               1                 0.000000  \\\n",
        "1                     0.0               2                64.000000   \n",
        "2                     0.0               1                 0.000000   \n",
        "3                     0.0               2                 2.666667   \n",
        "4                     0.0              10               627.500000   \n",
        "\n",
-       "   BounceRates  ExitRates  PageValues  SpecialDay Month  OperatingSystems  \\\n",
-       "0         0.20       0.20         0.0         0.0   Feb                 1   \n",
+       "   BounceRates  ExitRates  PageValues  SpecialDay Month  OperatingSystems   \n",
+       "0         0.20       0.20         0.0         0.0   Feb                 1  \\\n",
        "1         0.00       0.10         0.0         0.0   Feb                 2   \n",
        "2         0.20       0.20         0.0         0.0   Feb                 4   \n",
        "3         0.05       0.14         0.0         0.0   Feb                 3   \n",
@@ -203,7 +203,7 @@
        "4        3       1            4  Returning_Visitor     True    False  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,6 +219,26 @@
    "metadata": {},
    "source": [
     "# Machine Learning Phase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Month 10\n",
+      "VisitorType 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "cols = online_shoppers.select_dtypes('object')\n",
+    "for col in cols:\n",
+    "    print(col, online_shoppers[col].nunique())"
    ]
   },
   {
@@ -702,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
